docs: cria o schema de criar usuario.
